# netcodeUnix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cd.yml  cmake-single-platform.yml
include/: Client.h  Server.h  State.h  sockaddr_in_comparator.h
include/Game/: LocalState.h  Player.h  State.h
include/worker_threads/: Workers.h
src/: Client.cpp  Player.cpp  Server.cpp  State.cpp
src/Game/: LocalState.cpp  Player.cpp  State.cpp
src/worker_threads/: Workers.cpp
